<resources>
    <string name="asset">资产</string>
    <string name="sure_to_exit">确定退出？</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="NULL">N.A</string>
    <string name="asset_protecting">资产正在保护中</string>
    <string name="my_asset">我的总资产($)</string>
    <string name="_000">0.00</string>
    <string name="today">今日</string>
    <string name="more">更多</string>
    <string name="all_asset">全部资产</string>
    <string name="search">搜索</string>
    <string name="copy_success">复制成功</string>
    <string name="open_camear">打开摄像机</string>
    <string name="input_pay_password_">输入支付密码</string>
    <string name="choose_pic">选择照片</string>
    <string name="transfer">转帐</string>
    <string name="get_money">收款</string>
    <string name="shan_dui">闪兑</string>
    <string name="ziyuan">资源</string>
    <string name="vote">投票</string>
    <string name="b_business">币买卖</string>
    <string name="more_modle">更多工具</string>
    <string name="dollar">$</string>
    <string name="transfer_zhijie">直接转账</string>
    <string name="transfer_chat_person">联系人转账</string>
    <string name="transfer_scan">扫码转账</string>
    <string name="transfer_log">转账记录</string>
    <string name="amount">金额</string>
    <string name="status">状态</string>
    <string name="time">时间</string>
    <string name="formate_time">0000-00 00:00:00</string>
    <string name="status_completed">已完成</string>
    <string name="status_success">成功</string>
    <string name="status_failure">失败</string>
    <string name="to_wallet_safe">为了您的钱包安全，请备份钱包</string>
    <string name="delete_wallet">删除钱包</string>
    <string name="beifen">立即备份</string>
    <string name="makecopy_remark">·如果有人获取了你的助记词将直接获取你的资产\n ·请抄下助记词并存放在安全的地方</string>
    <string name="not_screen_shot">请勿截图</string>
    <string name="makecopy_wallet">备份钱包</string>
    <string name="makecopy_commemoration">备份助记词</string>
    <string name="next_step">下一步</string>
    <string name="makecopy_your_commemoration">请备份你的钱包助记词</string>
    <string name="remember_commemoration">请准确抄写并安全保存助记词</string>
    <string name="confirm_commemoration">确认助记词</string>
    <string name="confirm_your_commemoration">请确认你的钱包助记词</string>
    <string name="tips_confirm_commemoration">请按抄写的顺序点击助记词，确认你的备份助记词正确</string>
    <string name="complete">完成</string>
    <string name="transfer_address">转账地址</string>
    <string name="input_wallet_address">请输入或粘贴钱包地址</string>
    <string name="transfer_amount">转账数量</string>
    <string name="input_transfer_amount">请输入转账金额</string>
    <string name="all">全部</string>
    <string name="transfer_immediate">直接转账</string>
    <string name="left">剩余</string>
    <string name="eth">ETH</string>
    <string name="remark">备注</string>
    <string name="inpur_remark">请输入备注信息</string>
    <string name="minner_pay">矿工费</string>
    <string name="contact">联系人</string>
    <string name="add_new_contact">新建联系人</string>
    <string name="eth_cn">以太坊</string>
    <string name="save">保存</string>
    <string name="name">名字</string>
    <string name="wallet_bottom_level">钱包底层</string>
    <string name="wallet_address">钱包地址</string>
    <string name="input_scan_wallet_address">扫描或粘贴钱包地址</string>
    <string name="choose_wallet_bottom">请选择钱包底层</string>
    <string name="choose_input">选填</string>
    <string name="input_name">请输入名字</string>
    <string name="scan_to_pay">扫一扫，向我付钱</string>
    <string name="setting_price">设置金额</string>
    <string name="save_img">保存图片</string>
    <string name="get_money_address">收款地址</string>
    <string name="formate_address">hfuriwehfrweiojtgpowrjtoijiowrjyitojhiweotyjhwpr</string>
    <string name="copy_get_money_address">复制收款地址</string>
    <string name="log">记录</string>
    <string name="asset_detail">资产详情</string>
    <string name="wallet_name">钱包名称</string>
    <string name="publish_key">公钥</string>
    <string name="change_password">修改密码</string>
    <string name="export_privite_key">导出私钥</string>
    <string name="export_ketstore">导出Keystore</string>
    <string name="current_password">当前密码</string>
    <string name="new_password">新的密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="inpur_current_password">请输入当前密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="input_confirm_password">请再次输入密码</string>
    <string name="copy_privite_key">复制私钥</string>
    <string name="private_key">私钥</string>
    <string name="qr_code">二维码</string>
    <string name="offline_save">离线保存</string>
    <string name="not_use_net">请勿使用网络传输</string>
    <string name="password_manager_save">密码管理工具保存</string>
    <string name="tips_export_privite_key_1">切勿保存至邮箱、记事本、网盘、聊天工具等，非常危险</string>
    <string name="tips_export_privite_key_2">请勿通过网络工具传输，一旦被黑客获取将造成不可挽回的资产 损失。建议离线设备通过扫二维码方式传输。</string>
    <string name="tips_export_privite_key_3">建议使用密码管理工具管理</string>
    <string name="scan_now">仅供直接扫描</string>
    <string name="tips_export_privite_key_qrcode_1">二维码禁止保存、截图、及拍照。仅供用户在安全环境下直接扫 描来方便导入钱包</string>
    <string name="safe_to_use">在安全环境下使用</string>
    <string name="tips_export_privite_key_qrcode_2">请在确保四周无人及无摄像头的情况下使用。二维码一旦 被他人 获取将造成不可换回的资产损失</string>
    <string name="show_qr_code">显示二维码</string>
    <string name="copy_keystore">复制Keystore</string>
    <string name="keystore">Keystore</string>
    <string name="transfer_out">转出</string>
    <string name="transfer_in">转入</string>
    <string name="wallet_list">钱包列表</string>
    <string name="current">当前</string>
    <string name="not_make_copy">未备份</string>
    <string name="cumtomer_login">资产保护中</string>
    <string name="import_wallet">导入钱包</string>
    <string name="import_private_key">私钥导入</string>
    <string name="import_private_key_tips">通过输入明文私钥或扫描二维码进行导入</string>
    <string name="obser_wallet">观察钱包</string>
    <string name="obser_wallet_tips">无需导入私钥，输入账号或者对应公钥即可导入</string>
    <string name="static_wallet">冷钱包</string>
    <string name="static_wallet_tips">离线导入并保持与网络隔绝，确保私钥永不触网</string>
    <string name="import_comm">助记词导入</string>
    <string name="import_comm_tips">通过输入助记词或扫描二维码进行导入</string>
    <string name="import_keystore">Keystore导入</string>
    <string name="import_keystore_tips">输入keystore文件内容或扫描二维码进行导入</string>
    <string name="create_wallet">创建钱包</string>
    <string name="not_wallet">我没有钱包</string>
    <string name="usdt">USDT</string>
    <string name="transfer_out_amount">转出数量</string>
    <string name="choose_receive_wallet">请选择接收钱包</string>
    <string name="current_rate">当前汇率：</string>
    <string name="start_exchange">开始兑换</string>
    <string name="exchange_detail">兑换详情</string>
    <string name="transfer_out_wallet">转出钱包</string>
    <string name="ex_ratio">参考汇率</string>
    <string name="shouxufei">手续费</string>
    <string name="choose_bottom">选择底层</string>
    <string name="current_bottom">当前底层</string>
    <string name="chick_to_switch">点击切换</string>
    <string name="if_have_wallet">你是否有钱包？</string>
    <string name="have_wallet">我有钱包</string>
    <string name="visi_modle">访客模式</string>
    <string name="use_account_to_login">使用固定账号登录</string>
    <string name="eos_bottom_level">EOS底层</string>
    <string name="tips_create_wallet">·我已仔细阅读并同意 服务及隐私条款 \n·密码用于保护私钥和交易授权，强度非常重要\n·App不存储密码，也无法帮您找回，请务必牢</string>
    <string name="set_wallet_name">设置钱包名</string>
    <string name="input_wallet_name">请输入钱包名</string>
    <string name="set_password">设置密码</string>
    <string name="input_over_8_password">请输入不少于8位数的密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="have_read_agree">我已仔细阅读并同意</string>
    <string name="service_note">服务及隐私条款</string>
    <string name="input_private_key">请输入明文私钥</string>
    <string name="wallet_system">钱包体系</string>
    <string name="note_massage">提示信息</string>
    <string name="input_wallet_password">请输入您的钱包密码</string>
    <string name="input_your_wallet_name">请输入您的钱包名称</string>
    <string name="confirm_wallet_password">请再次输入您的钱包密码</string>
    <string name="can_empty">可不填</string>
    <string name="start_import">开始导入</string>
    <string name="input_comm">请输入助记词，按空格做分隔</string>
    <string name="get_back_way">取回路径</string>
    <string name="eth_bottom_level">以太坊底层</string>
    <string name="obsercer_wallet">观察钱包</string>
    <string name="tips_observer_wallet">观察钱包不需要导入私钥，只导入账号名或公钥，进行日 常查看账号、交易记录和接收通知。</string>
    <string name="cood_wallet">冷钱包</string>
    <string name="key_create_tool">密钥生成器</string>
    <string name="what_is_privatekey">什么是私钥？</string>
    <string name="copy_or_input_keystore">直接复制粘贴钱包Keystore文件内容至输入框。或者通过生产 Keystore内容的二维码，扫描录入。</string>
    <string name="keystore_password">Keystore密码</string>
    <string name="input_password">请输入密码</string>
    <string name="not_lower_8">密码长度不能小于8位数</string>
    <string name="tow_input_must_same">两次输入的密码必须相同</string>
    <string name="create_wallet_success">钱包创建成功</string>
    <string name="comme_complete">请先完成助记词顺序记忆</string>
    <string name="makecopy_success">备份成功</string>
    <string name="makecopy_failure">助记词顺序错误</string>
    <string name="had_make_copy">已备份</string>
    <string name="transfer_success">转账成功</string>
    <string name="add_wallet">添加钱包</string>
    <string name="sure_have_read_agree">请确认已经阅读相关协议</string>
    <string name="storage_permission_need_open">使用此功能必须开启内存权限</string>
    <string name="sure_to_delete_wallet">确认删除钱包？</string>
    <string name="bottom_name_eos">EOS底层</string>
    <string name="bottom_name_eth">ETH底层</string>
    <string name="bottom_name_iost">IOST底层</string>
    <string name="bottom_name_tron">Tron底层</string>
    <string name="bottom_name_binance">Binance底层</string>
    <string name="bottom_name_bos">BOS底层</string>
    <string name="bottom_name_cosmos">COSMOS底层</string>
    <string name="bottom_name_mk">墨客底层</string>
    <string name="not_open">暂未开放</string>
    <string name="wallet_name_must">钱包名称为必填项</string>
    <string name="connfirm_password_must">确认密码为必填项</string>
    <string name="password_must">密码为必填项</string>
    <string name="private_key_must">私钥为必填项</string>
    <string name="comm_must">助记词为必填项</string>
    <string name="bind_coin_success">绑定成功</string>
    <string name="sure_to_unbind_coin">确定取消绑定？</string>
    <string name="sure_to_bind_coin">确定绑定？</string>
    <string name="Asset_overview">资产总览</string>
    <string name="Management_of_the_purse">管理钱包</string>
    <string name="trading_record">交易记录</string>
    <string name="invite_friends">邀请好友</string>
    <string name="support_center">帮助中心</string>
    <string name="About_Us">关于我们</string>
    <string name="system_settings">系统设置</string>
    <string name="requst_err">请求错误</string>
    <string name="test1">&#036;</string>
    <string name="the_article_details">文章详情</string>
    <string name="old_password_must">当前密码为必填</string>
    <string name="change_password_success">修改密码成功</string>
    <string name="coin_choose">币种选择</string>
    <string name="business_detail">交易详情</string>
    <string name="my_asset1">我的资产（$)</string>
    <string name="pass_not_null">密码不能为空</string>
    <string name="platform_notice">平台公告</string>
    <string name="notice_details">公告详情</string>
    <string name="price_">金额：</string>
    <string name="mining_pay_">矿工费用：</string>
    <string name="get_money_address_">收款地址：</string>
    <string name="wallet_password">钱包密码</string>
    <string name="create_chat_group">创建群聊</string>
    <string name="input_group_name">请输入群名称</string>
    <string name="group_name">群名称</string>
    <string name="other_account">对方账号</string>
    <string name="other_nickname">对方昵称</string>
    <string name="input_nickname">请输入对方账号</string>
    <string name="transfer_to">转让</string>
    <string name="set_beizhu">设置备注</string>
    <string name="move_to_black_list">加入黑名单</string>
    <string name="delete_friends">删除好友</string>
    <string name="setting_group_avatar">设置群头像</string>
    <string name="set_group_info">设置群信息</string>
    <string name="group_show_explain">群简介</string>
    <string name="input_group_show_explain">输入群简介</string>
</resources>