<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/btn_select_divice"
        android:layout_width="0dp"
        android:layout_height="@dimen/setting_item_height"
        android:layout_marginBottom="@dimen/dp_1"
        android:background="@drawable/bg_dialog_item_top"
        android:gravity="center"
        android:text="@string/choose_pic"
        app:layout_constraintBottom_toTopOf="@+id/btn_open_camear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_open_camear"
        android:layout_width="0dp"

        android:layout_height="@dimen/setting_item_height"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center"
        android:background="@drawable/bg_dialog_item"
        android:text="@string/open_camear"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/setting_item_height"
        android:gravity="center"
        android:text="@string/cancel"
        android:background="@drawable/bg_dialog_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>