<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/color_FFFFFF"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/btn_set_beizhu"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:background="@drawable/bg_item"
        android:drawableEnd="@mipmap/wd_gd_icon"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_padding_x_min"
        android:paddingEnd="@dimen/dp_padding_x_min"
        android:text="@string/set_beizhu"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView175"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_padding_x_min"
        android:text="@string/move_to_black_list"
        android:textSize="@dimen/sp_15"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_set_beizhu" />


    <CheckBox
        android:id="@+id/cb_removefriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_padding_x_min"
        android:button="@drawable/skin_btn_check_box_1"
        app:layout_constraintBottom_toBottomOf="@+id/textView175"
        app:layout_constraintEnd_toEndOf="@+id/textView175"
        app:layout_constraintTop_toTopOf="@+id/textView175" />

    <com.qingyun.mvpretrofitrx.mvp.weight.BoldTextView
        android:id="@+id/btn_delete_friends"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/bg_e04159_round_8"
        android:gravity="center"
        android:paddingStart="@dimen/dp_padding_x_min"
        android:text="@string/delete_friends"
        android:textColor="@color/color_FFFFFF"
        android:textSize="@dimen/sp_17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView175" />


    <TextView
        android:layout_width="@dimen/dp_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/line"
        app:layout_constraintTop_toBottomOf="@+id/btn_set_beizhu"
        android:layout_marginStart="@dimen/dp_padding_x_min"
        android:layout_height="@dimen/dp_1" />


    <TextView
        android:layout_width="@dimen/dp_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/line"
        app:layout_constraintTop_toBottomOf="@+id/textView175"
        android:layout_marginStart="@dimen/dp_padding_x_min"
        android:layout_height="@dimen/dp_1" />
</android.support.constraint.ConstraintLayout>